縦書きの文字対応を修正した アプリケーションアイコンを設定した

--- a/MojiCollaTool/MojiCollaTool/MojiCollaTool.csproj
+++ b/MojiCollaTool/MojiCollaTool/MojiCollaTool.csproj
@@ -5,6 +5,11 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>mctool-icon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="mctool-icon.ico" />
+  </ItemGroup>
 
 </Project>
