--- a/MojiCollaTool/MojiCollaTool/MojiCollaTool.csproj
+++ b/MojiCollaTool/MojiCollaTool/MojiCollaTool.csproj
@@ -15,6 +15,7 @@
     <None Remove="Images\image.png" />
     <None Remove="Images\moji.png" />
     <None Remove="Images\mojiimage.png" />
+    <None Remove="Images\new.png" />
     <None Remove="Images\save.png" />
   </ItemGroup>
 
@@ -29,6 +30,7 @@
     <Resource Include="Images\image.png" />
     <Resource Include="Images\moji.png" />
     <Resource Include="Images\mojiimage.png" />
+    <Resource Include="Images\new.png" />
     <Resource Include="Images\save.png" />
   </ItemGroup>
 
